--- a/boutique.html
+++ b/boutique.html
@@ -13,81 +13,112 @@
       padding: 0;
     }
     .container {
-      max-width: 600px;
-      margin: 50px auto;
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 20px;
       text-align: center;
       background-color: #1a1a1a;
-      padding: 30px;
       border-radius: 12px;
-      box-shadow: 0 0 15px rgba(255,255,255,0.05);
     }
     h1 {
-      font-size: 1.6rem;
+      font-size: 1.8rem;
       margin-bottom: 20px;
     }
-    img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 8px;
+    .image-gallery {
+      display: flex;
+      overflow-x: auto;
+      gap: 10px;
       margin-bottom: 20px;
+      justify-content: center;
     }
-    select, button {
-      padding: 12px 16px;
-      font-size: 1rem;
-      border: none;
+    .image-gallery img {
+      height: 400px;
       border-radius: 8px;
-      margin: 10px 5px;
+      flex-shrink: 0;
     }
-    select {
+    .choice-buttons {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      margin: 20px 0;
+    }
+    .choice-buttons button {
       background-color: #111;
       color: white;
-      border: 1px solid #aaa;
+      border: 1px solid white;
+      padding: 12px 20px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 1rem;
     }
-    button {
+    .choice-buttons button.active {
+      background-color: white;
+      color: black;
+    }
+    .buy-btn {
+      padding: 14px 26px;
       background-color: white;
       color: black;
       font-weight: bold;
+      border: none;
+      border-radius: 8px;
       cursor: pointer;
+      font-size: 1rem;
     }
-    button:hover {
+    .buy-btn:hover {
       background-color: #ccc;
     }
-
     @media (max-width: 600px) {
-      .container {
-        margin: 30px 15px;
-        padding: 20px;
+      .image-gallery img {
+        height: 250px;
       }
     }
   </style>
 </head>
 <body>
-
   <div class="container">
     <h1>Poster MBK - 40x60cm</h1>
-    <img id="posterImage" src="poster-mbk.jpg" alt="Poster MBK">
-    
-    <div>
-      <select id="imageSelector" onchange="changeImage()">
-        <option value="poster-mbk.jpg">1</option>
-        <option value="poster-levres.jpg">2</option>
-      </select>
+
+    <div class="image-gallery" id="gallery">
+      <img src="poster-mbk.jpg" alt="Poster 1" class="poster-image">
     </div>
 
-    <div>
-      <a href="https://buy.stripe.com/cNi6oJ7HZ8a24Lhat038402">
-        <button>Acheter - 25€</button>
-      </a>
+    <div class="choice-buttons">
+      <button onclick="selectPoster(1)" id="btn1" class="active">1</button>
+      <button onclick="selectPoster(2)" id="btn2">2</button>
     </div>
+
+    <a href="https://buy.stripe.com/cNi6oJ7HZ8a24Lhat038402">
+      <button class="buy-btn">Acheter - 25€</button>
+    </a>
   </div>
 
   <script>
-    function changeImage() {
-      const selector = document.getElementById("imageSelector");
-      const image = document.getElementById("posterImage");
-      image.src = selector.value;
+    const gallery = document.getElementById("gallery");
+    const btn1 = document.getElementById("btn1");
+    const btn2 = document.getElementById("btn2");
+
+    const posters = {
+      1: ["poster-mbk.jpg", "poster-mbk-detail1.jpg", "poster-mbk-detail2.jpg"],
+      2: ["poster-levres.jpg", "poster-levres-detail1.jpg", "poster-levres-detail2.jpg"]
+    };
+
+    function selectPoster(num) {
+      // toggle active button
+      btn1.classList.remove("active");
+      btn2.classList.remove("active");
+      if (num === 1) btn1.classList.add("active");
+      else btn2.classList.add("active");
+
+      // update images
+      gallery.innerHTML = "";
+      posters[num].forEach(src => {
+        const img = document.createElement("img");
+        img.src = src;
+        img.alt = `Poster ${num}`;
+        gallery.appendChild(img);
+      });
     }
   </script>
-
 </body>
 </html>
